src/test/ui/out-of-order-shadowing.stderr
error[E0659]: `bar` is ambiguous
  --> $DIR/out-of-order-shadowing.rs:15:1
   |
LL | bar!(); //~ ERROR `bar` is ambiguous
   | ^^^ ambiguous name
   |
note: `bar` could refer to the name defined here
  --> $DIR/out-of-order-shadowing.rs:14:1
   |
LL | define_macro!(bar);
   | ^^^^^^^^^^^^^^^^^^^
note: `bar` could also refer to the name defined here
  --> $DIR/out-of-order-shadowing.rs:13:1
   |
LL | macro_rules! bar { () => {} }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: macro-expanded macros do not shadow
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
